static/styles/main.css
/* Hero Banner */
section#hero{
     height: 400px;
     width: 100%;

     background-image: url("../assets/trees-faded.png"), linear-gradient(180deg, #020617 0%, #022c22 100%);
     background-size: auto 100%;
     background-repeat: no-repeat;
     background-position: bottom right;

     display: flex;
     flex-direction: column;
     row-gap: 10px;

     padding: 0 var(--padding);
     justify-content: center;
 }

/* Meet the Team */

#team{
    padding: 60px var(--padding);
    background: white;
}

.section_title{
    font-size: 32px;
    font-weight: 700;
    margin: 5px 0;
    margin-bottom: 15px;
}

#team_description, #events_description, #community_description{
    font-size: 18px;
    line-height: 18px;
    font-weight: 300;
    line-height: 1.5;
}

#members_wrapper{
    display: flex;
    row-gap: 50px;
    column-gap: 20px;
    flex-wrap: wrap;
    margin: 50px 0;
    justify-content: space-between;
}

.member{
    display: flex;
    flex-direction: column;
    row-gap: 10px;
    border-radius: 5px;
    width: 380px;
    margin: auto;
}

.member .role{
    font-size: 18px;
    font-weight: 400;
}

.member .title{
    font-weight: 600;
    font-size: 27px;
}

.member .description{
    font-size: 16px;
    font-weight: 200;
    line-height: 1.5;
}

#events{
    padding: 60px var(--padding);
}

#events_wrapper{
    margin: 20px 0;
    display: flex;
    column-gap: 20px;
    row-gap: 20px;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.event{
    width: 400px;
    flex: 1;
    min-width: 375px;
    height: 220px;
    background: var(--bg);
    background-size: 100%;
    border-radius: 24px;
    display: flex;
    flex-direction: column;
    padding: 20px;
    justify-content: space-between;
    background-position: center;
    transition: 0.5s ease-in-out background-size;
    text-decoration: none;
}

@media (max-width: 400px){
    .event{
        min-width: 300px;
        background-size: 100% 100%;
    }
}

.event:hover{
    background-size: 110%;
}

.event > div{
    display: flex;
    flex-direction: column;
}

.event .title{
    font-size: 24px;
    font-weight: 700;
    color: white;
}

.event .description{
    font-size: 14px;
    font-weight: 200;
    color: white;
}

.upcoming{
    background: #ef4444;
    font-weight: 600;
    color: white;
    padding: 5px 15px;
    width: fit-content;
    border-radius: 20px;
}

#community{
    padding: 60px var(--padding);
    display: flex;
    column-gap: 40px;
    row-gap: 20px;
    flex-wrap:wrap;
    background: #eef2ff;
}

#community iframe{
    width: 100%;
}


#community .left{
    min-width: 400px;
    flex: 1;
}

@media (max-width: 500px){
    #community .left{
        min-width: 200px;
    }
}

#community .right{
    flex: 1;
}

.member .headshot img{
    width: 100%;
}

